# MindSpeed-MM

./: .gitignore  MANIFEST.in  OWNERS  README.md  Third-Party Open Source Software Notice.txt  evaluate_gen.py  evaluate_vlm.py  inference_qihoo.py  inference_sora.py  inference_vlm.py  posttrain_qwen2vl_dpo.py  posttrain_stepvideo_dpo.py  posttrain_vlm_grpo.py  pretrain_ae.py  pretrain_deepseekvl.py  pretrain_internvl.py  pretrain_llava.py  pretrain_qwen2vl.py  pretrain_sora.py  pretrain_vlm.py  pretrain_whisper.py  pyproject.toml
checkpoint/: __init__.py  convert_cli.py  deepseekvl_hf_to_mm.py  internvl2_hf_to_mm.py  internvl2_mm_to_hf.py  operator.py  qwen2_5_vl_hf_to_mm.py  qwen2_5_vl_mm_to_hf.py  qwen2vl_hf_to_mm.py  qwen2vl_mm_to_hf.py  qwen2vl_resplit.py  qwen2vl_resplit_pp.py  qwen_vl_hf_to_mm.py  utils.py
checkpoint/common/: constant.py  converter.py  merge_base_lora_weight.py  types.py
checkpoint/sora_model/: hunyuanvideo_converter.py  opensoraplan_converter.py  sora_model_converter copy.py  sora_model_converter.py  wan_converter.py
checkpoint/vlm_model/: config.py  deepseekvl_hf_to_mm.py  hf_to_mm.py  internvl2_hf_to_mm.py  internvl2_mm_to_hf.py  mm_to_hf.py  operator.py  qwen2_5_vl_mm_to_hf.py  qwen2vl_mm_to_hf.py  qwen2vl_resplit.py  qwen_vl_hf_to_mm.py  qwen_vl_mm_to_hf.py  utils.py  vlm_model.py
ci/: access_control_test.py  run_ci.sh
docs/: FAQ.md  SECURITYNOTE.md  public_address_statement.md
docs/features/: automatic_parallelism_mm.md  bucket_reordering.md  dist-train.md  dit_usp.md  (+13 more)
mindspeed_mm/: __init__.py  arguments.py  training.py
(+886 files in other folders)
